--- a/app/views/annons_listed.scala.html
+++ b/app/views/annons_listed.scala.html
@@ -16,11 +16,13 @@
                 <span class="label label-success">Upphittat</span>
             }
             @if(annons.typ.equals("borttappat")){
-                <span class="label label-primary">Borttappat</span>
+                <span class="label label-danger">Borttappat</span>
             }
             <em>@annons.date</em>
             <br>
+                <div class="annons_text">
             @annons.text
+                </div>
         </div>
     </div>
 </div>
