--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -21,7 +21,7 @@
         <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("lib/tether/dist/js/tether.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" href="@routes.Assets.versioned("lib/tether/dist/css/tether.min.css")">
-        <link rel="stylesheet" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")">
+        @*<link rel="stylesheet" href="@routes.Assets.versioned("lib/bootstrap/css/bootstrap.min.css")">*@
         <script src="@routes.Assets.versioned("lib/bootstrap/js/bootstrap.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" href="@routes.Assets.versioned("lib/font-awesome/css/font-awesome.min.css")">
         <script src="@routes.Assets.versioned("lib/imgLiquid/js/imgLiquid-min.js")" type="text/javascript"></script>
