Added some configuration variables. Fixed so that images can be saved remotely.

--- a/app/views/annons.scala.html
+++ b/app/views/annons.scala.html
@@ -41,7 +41,7 @@ defer></script>
                 </div>
                 <div class="col-sm-4">
                     <div id="image_panel" class="imgLiquidFill imgLiquid" style="width:225px; height:225px;">
-                        <img class="media-object img-rounded" src="@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="@annons.typ.capitalize: @annons.rubrik">
+                        <img class="media-object img-rounded" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="@annons.typ.capitalize: @annons.rubrik">
                     </div>
                 </div>
             </div>
