--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -17,10 +17,9 @@ Determine button colors.
         @* LOGO HERE*@
 
         <span>
-                <img id="large_logo" src="@routes.Assets.versioned("images/logo/logo-try-nalgrej-(croppad).png")" alt="logo" style="width: auto; height: auto;">
-                <img id="small_logo" src="@routes.Assets.versioned("images/logo/logo-try-nalgrej-(endast-nal)-(croppad).png")" alt="logo" style="width: auto; height: auto;">
+                <img id="large_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/logo-try-nalgrej-(croppad).png")" alt="logo" style="width: auto; height: auto;">
+                <img id="small_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/logo-try-nalgrej-(endast-nal)-(croppad).png")" alt="logo" style="width: auto; height: auto;">
         </span>
-
 </nav>
 
 
