--- a/app/views/annons_listed.scala.html
+++ b/app/views/annons_listed.scala.html
@@ -5,7 +5,7 @@
         <div class="media-left">
             <a href="@routes.HomeController.annonsPage(annons.id.get)">
                 <div class="imgLiquidFill imgLiquid" style="width:100px; height:100px;">
-                    <img class="media-object img-rounded" src="@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="@annons.typ.capitalize: @annons.rubrik">
+                    <img class="media-object img-rounded" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/annons_imgs/"+annons.img)" alt="@annons.typ.capitalize: @annons.rubrik">
                 </div>
             </a>
         </div>
@@ -26,3 +26,4 @@
         </div>
     </div>
 </div>
+
