--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -17,7 +17,7 @@
         <script type="text/javascript" src="@routes.HomeController.javascriptRoutes"></script>
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon/lostandfound-favicon.png")">
+        <link rel="shortcut icon" type="image/png" href="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/favicon/lostandfound-favicon.png")">
         <script src="@routes.Assets.versioned("lib/jquery/jquery.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("lib/tether/dist/js/tether.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" href="@routes.Assets.versioned("lib/tether/dist/css/tether.min.css")">
