--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -6,7 +6,7 @@ Determine button colors.
 *@
 <div id="active_page" style="display: none;">@title</div>
 
-<nav id="nav_bar" class="navbar navbar-fixed-top">
+<nav id="nav_bar_top" class="navbar navbar-fixed-top">
 		<button type="button" class="btn btn-secondary" id="annonser_button" onclick="location.href='@routes.HomeController.index()';">
 				<i class="fa fa-list"></i>
 				Annonser</button>
@@ -17,8 +17,8 @@ Determine button colors.
         @* LOGO HERE*@
 
         <span>
-                <img id="large_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/logo-try-nalgrej-(croppad).png")" alt="logo" style="width: auto; height: auto;">
-                <img id="small_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/logo-try-nalgrej-(endast-nal)-(croppad).png")" alt="logo" style="width: auto; height: auto;">
+                <img id="large_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/tbax_logo_big.png")" alt="logo" style="width: auto; height: auto;">
+                <img id="small_logo" src="@dao.AppStringResources.imagepath@routes.Assets.versioned("images/logo/tbax_logo_small.png")" alt="logo" style="width: auto; height: auto;">
         </span>
 </nav>
 
